Tests/Negative/ReturnTypeMismatch.mr
fun test(): bool {
    return 10; // Error: Cannot cast i32 to bool in return statement
}
